--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,7 @@ dependencies {
 
     // マテリアルデザイン
     implementation 'com.google.android.material:material:1.5.0'
+
+    // MPAndroidChart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
