--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id "com.google.gms.google-services"
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -70,6 +71,8 @@ dependencies {
     // Firebase
     implementation(platform("com.google.firebase:firebase-bom:32.3.1"))
     implementation("com.google.firebase:firebase-analytics-ktx")
+    // Crashlytics
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
 
     // DataStore
     implementation("androidx.datastore:datastore-preferences:1.0.0")
